<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto" >
    <item
        android:id="@+id/menu_unarchive"
        android:icon="@drawable/ic_unarchive_white_24dp"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:title="@string/unarchive"/>
    <item
        android:id="@+id/menu_selected_all"
        android:icon="@drawable/ic_select_all_white_24dp"
        android:orderInCategory="101"
        app:showAsAction="ifRoom"
        android:title="@string/select_all"/>
    <item
        android:id="@+id/menu_edit"
        android:icon="@drawable/ic_mode_edit_white_24dp"
        android:orderInCategory="102"
        app:showAsAction="ifRoom"
        android:title="@string/edit" />
    <item
        android:id="@+id/menu_info"
        android:icon="@drawable/ic_info_white_24dp"
        android:orderInCategory="103"
        app:showAsAction="ifRoom"
        android:title="@string/info" />
    <item
        android:id="@+id/menu_color"
        android:icon="@drawable/ic_color_lens_white_24dp"
        android:orderInCategory="104"
        app:showAsAction="ifRoom"
        android:title="@string/select_color">
        <menu>
            <item
                android:id="@+id/menu_white"
                android:icon="@drawable/ic_lens_white_24dp"
                android:orderInCategory="200"
                android:title="@string/white"/>
            <item
                android:id="@+id/menu_red"
                android:icon="@drawable/ic_lens_red_24dp"
                android:orderInCategory="201"
                android:title="@string/red"/>
            <item
                android:id="@+id/menu_pink"
                android:icon="@drawable/ic_lens_pink_24dp"
                android:orderInCategory="202"
                android:title="@string/pink"/>
            <item
                android:id="@+id/menu_purple"
                android:icon="@drawable/ic_lens_purple_24dp"
                android:orderInCategory="203"
                android:title="@string/purple"/>
            <item
                android:id="@+id/menu_deep_purple"
                android:icon="@drawable/ic_lens_deep_purple_24dp"
                android:orderInCategory="204"
                android:title="@string/deep_purple"/>
            <item
                android:id="@+id/menu_indigo"
                android:icon="@drawable/ic_lens_indigo_24dp"
                android:orderInCategory="205"
                android:title="@string/indigo"/>
            <item
                android:id="@+id/menu_blue"
                android:icon="@drawable/ic_lens_blue_24dp"
                android:orderInCategory="206"
                android:title="@string/blue"/>
            <item
                android:id="@+id/menu_green"
                android:icon="@drawable/ic_lens_green_24dp"
                android:orderInCategory="207"
                android:title="@string/green"/>
            <item
                android:id="@+id/menu_light_green"
                android:icon="@drawable/ic_lens_light_green_24dp"
                android:orderInCategory="208"
                android:title="@string/light_green"/>
            <item
                android:id="@+id/menu_lime"
                android:icon="@drawable/ic_lens_lime_24dp"
                android:orderInCategory="209"
                android:title="@string/lime"/>
            <item
                android:id="@+id/menu_yellow"
                android:icon="@drawable/ic_lens_yellow_24dp"
                android:orderInCategory="210"
                android:title="@string/yellow"/>
            <item
                android:id="@+id/menu_amber"
                android:icon="@drawable/ic_lens_amber_24dp"
                android:orderInCategory="211"
                android:title="@string/amber"/>
            <item
                android:id="@+id/menu_orange"
                android:icon="@drawable/ic_lens_orange_24dp"
                android:orderInCategory="212"
                android:title="@string/orange"/>
            <item
                android:id="@+id/menu_deep_orange"
                android:icon="@drawable/ic_lens_deep_orange_24dp"
                android:orderInCategory="213"
                android:title="@string/deep_orange"/>
            <item
                android:id="@+id/menu_brown"
                android:icon="@drawable/ic_lens_brown_24dp"
                android:orderInCategory="214"
                android:title="@string/brown"/>
            <item
                android:id="@+id/menu_blue_grey"
                android:icon="@drawable/ic_lens_blue_grey_24dp"
                android:orderInCategory="215"
                android:title="@string/blue_grey"/>
        </menu>
    </item>
</menu>