<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/contact"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/contact"/>
        <item
            android:id="@+id/recent"
            android:icon="@drawable/ic_access_time_black_24dp"
            android:title="@string/recent"/>
    </group>
    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/call"
            android:icon="@drawable/ic_call_black_24dp"
            android:title="@string/call"/>
        <item
            android:id="@+id/send"
            android:checked="true"
            android:icon="@drawable/ic_email_black_24dp"
            android:title="@string/send"/>
        <item
            android:id="@+id/note"
            android:icon="@drawable/ic_note_black_24dp"
            android:title="@string/note"/>
    </group>
    <group
        android:id="@+id/group3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/archive"
            android:icon="@drawable/ic_archive_black_24dp"
            android:title="@string/archive"/>
        <item
            android:id="@+id/trash"
            android:icon="@drawable/ic_delete_black_24dp"
            android:title="@string/trash"/>
    </group>
    <!--<group-->
        <!--android:id="@+id/group4"-->
        <!--android:checkableBehavior="single">-->
        <!--<item-->
            <!--android:id="@+id/settings"-->
            <!--android:icon="@drawable/ic_settings_black_24dp"-->
            <!--android:title="@string/settings"/>-->
    <!--</group>-->
</menu>
