<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/content_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?colorPrimaryDark"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/padding32"
            android:paddingTop="@dimen/padding32">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <!-- call -->
                <LinearLayout
                    android:id="@+id/layout_item1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/icon1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="start"
                        android:padding="@dimen/padding16"
                        android:tint="?colorPrimary"
                        android:src="@drawable/ic_call_black_24dp"/>

                    <LinearLayout
                        android:id="@+id/item1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/padding16"
                        android:layout_marginLeft="@dimen/padding16"
                        android:layout_marginRight="@dimen/padding16"
                        android:layout_marginStart="@dimen/padding16"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/title1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="@string/tel"
                            android:textAppearance="?android:attr/textAppearanceMedium"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/subtitle1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="@string/no_data"
                            android:textAppearance="?android:attr/textAppearanceSmall"/>

                    </LinearLayout>
                </LinearLayout>

                <!-- e-mail -->
                <LinearLayout
                    android:id="@+id/layout_item2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/icon2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="start"
                        android:padding="@dimen/padding16"
                        android:tint="?colorPrimary"
                        android:src="@drawable/ic_email_black_24dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/padding16"
                        android:layout_marginLeft="@dimen/padding16"
                        android:layout_marginRight="@dimen/padding16"
                        android:layout_marginStart="@dimen/padding16"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/title2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="@string/email"
                            android:textAppearance="?android:attr/textAppearanceMedium"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/subtitle2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="@string/no_data"
                            android:textAppearance="?android:attr/textAppearanceSmall"/>

                    </LinearLayout>
                </LinearLayout>


                <!-- ノート -->
                <LinearLayout
                    android:id="@+id/layout_item3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/icon3"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="start"
                        android:padding="@dimen/padding16"
                        android:tint="?colorPrimary"
                        android:src="@drawable/ic_note_black_24dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/padding16"
                        android:layout_marginLeft="@dimen/padding16"
                        android:layout_marginRight="@dimen/padding16"
                        android:layout_marginStart="@dimen/padding16"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <!--<android.support.design.widget.TextInputLayout-->
                            <!--android:id="@+id/textInputLayout_note"-->
                            <!--android:layout_width="match_parent"-->
                            <!--android:layout_height="wrap_content">-->

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/title3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:maxLines="1"
                                android:text="@string/note"
                                android:textAppearance="?android:attr/textAppearanceMedium"/>

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/subtitle3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:text="@string/no_data"
                                android:textAppearance="?android:attr/textAppearanceSmall"/>

                        <!--</android.support.design.widget.TextInputLayout>-->
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>